# mcp-server-docy

./: .docy.urls  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
src/mcp_server_docy/: __init__.py  __main__.py  server.py
sse-server/: Makefile  README.md
tests/: test_server.py
