[project]
name = "mcp-server-docy"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for accessing documentation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Oliver Borchers" }]
keywords = ["documentation", "mcp", "llm", "automation", "scraper"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
    "cachetools>=5.3.0",
    "loguru>=0.7.3",
    "crawl4ai>=0.5.0.post8",
]

[project.scripts]
mcp-server-docy = "mcp_server_docy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.7.3",
    "tomli>=2.2.1",
    "twine>=6.1.0",
]
